...
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="muffle_status">Status: %s</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_disable">Disable</string>
    <string name="btn_edit">Edit</string>
    <string name="title_activity_add_muffle_point">Create</string>
    <string name="label_name">Name</string>
    <string name="label_range">Range (%d m)</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="label_media">Media</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_alarm">Alarm</string>
    <string name="action_save">Save</string>
    <string name="title_activity_edit_muffle_point">Edit</string>
    <string name="label_enable">Enable</string>
    <string name="btn_delete">Delete</string>
    <string name="title_activity_select_muffle_point">Select point</string>
    <string name="hint_search">Search on map…</string>
    <string name="location_search_url">https://photon.komoot.de/api/?q=%s</string>
    <string name="muffle_point_status_disabled">Disabled</string>
    <string name="muffle_point_status_active">In area and active</string>
    <string name="muffle_point_status_not_active">Not in area</string>
    <string name="muffle_point_status_in_area">In area and not active</string>
...
